--- a/go-nepal.io/package.json
+++ b/go-nepal.io/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "react": "19.2.3",
